# stg

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  Makefile  README.md
src/: chat.cpp  chat.h  common.cpp  common.h  config.h  main.cpp  ted.cpp  ted.h  tgclient.cpp  tgclient.h
